all files create

--- a/girusantal_hf7/race-calendar.html
+++ b/girusantal_hf7/race-calendar.html
@@ -204,18 +204,18 @@
                     <td>11</td>
                     <td>12</td>
                     <td>13</td>
-                    <td class="practice">14</td>
-                    <td class="time">15</td>
-                    <td class="race">16</td>
+                    <td class="practice" data-tooltip="Melbourne edzés">14</td>
+                    <td class="time" data-tooltip="Melbourne időmérő">15</td>
+                    <td class="race" data-tooltip="Melbourne verseny">16</td>
                 </tr>
                 <tr>
                     <td>17</td>
                     <td>18</td>
                     <td>19</td>
                     <td>20</td>
-                    <td class="practice">21</td>
-                    <td class="time">22</td>
-                    <td class="race">23</td>
+                    <td class="practice" data-tooltip="Sanghaj edzés">21</td>
+                    <td class="time" data-tooltip="Sanghaj időmérő">22</td>
+                    <td class="race" data-tooltip="Sanghaj verseny">23</td>
                 </tr>
                 <tr>
                     <td>24</td>
@@ -254,27 +254,27 @@
                     <td>1</td>
                     <td>2</td>
                     <td>3</td>
-                    <td class="practice">4</td>
-                    <td class="time">5</td>
-                    <td class="race">6</td>
+                    <td class="practice" data-tooltip="Suzuka edzés">4</td>
+                    <td class="time" data-tooltip="Suzuka időmérő">5</td>
+                    <td class="race" data-tooltip="Suzuka verseny">6</td>
                 </tr>
                 <tr>
                     <td>7</td>
                     <td>8</td>
                     <td>9</td>
                     <td>10</td>
-                    <td class="practice">11</td>
-                    <td class="time">12</td>
-                    <td class="race">13</td>
+                    <td class="practice" data-tooltip="Bahrein edzés">11</td>
+                    <td class="time" data-tooltip="Bahrein időmérő">12</td>
+                    <td class="race" data-tooltip="Bahrein verseny">13</td>
                 </tr>
                 <tr>
                     <td>14</td>
                     <td>15</td>
                     <td>16</td>
                     <td>17</td>
-                    <td class="practice">18</td>
-                    <td class="time">19</td>
-                    <td class="race">20</td>
+                    <td class="practice" data-tooltip="Dzsidda edzés">18</td>
+                    <td class="time" data-tooltip="Dzsidda időmérő">19</td>
+                    <td class="race" data-tooltip="Dzsidda verseny">20</td>
                 </tr>
                 <tr>
                     <td>21</td>
@@ -325,9 +325,9 @@
                     <td></td>
                     <td></td>
                     <td>1</td>
-                    <td class="practice">2</td>
-                    <td class="time">3</td>
-                    <td class="race">4</td>
+                    <td class="practice" data-tooltip="Miami edzés">2</td>
+                    <td class="time" data-tooltip="Miami időmérő">3</td>
+                    <td class="race" data-tooltip="Miami verseny">4</td>
                 </tr>
                 <tr>
                     <td>5</td>
@@ -343,26 +343,26 @@
                     <td>13</td>
                     <td>14</td>
                     <td>15</td>
-                    <td class="practice">16</td>
-                    <td class="time">17</td>
-                    <td class="race">18</td>
+                    <td class="practice" data-tooltip="Imola edzés">16</td>
+                    <td class="time" data-tooltip="Imola időmérő">17</td>
+                    <td class="race" data-tooltip="Imola verseny">18</td>
                 </tr>
                 <tr>
                     <td>19</td>
                     <td>20</td>
                     <td>21</td>
                     <td>22</td>
-                    <td class="practice">23</td>
-                    <td class="time">24</td>
-                    <td class="race">25</td>
+                    <td class="practice" data-tooltip="Monacó edzés">23</td>
+                    <td class="time" data-tooltip="Monacó időmérő">24</td>
+                    <td class="race" data-tooltip="Monacó verseny">25</td>
                 </tr>
                 <tr>
                     <td>26</td>
                     <td>27</td>
                     <td>28</td>
                     <td>29</td>
-                    <td class="practice">30</td>
-                    <td class="time">31</td>
+                    <td class="practice" data-tooltip="Barcelona edzés">30</td>
+                    <td class="time" data-tooltip="Barcelona időmérő">31</td>
                     <td></td>
                 </tr>
                 <tr>
@@ -395,7 +395,7 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td class="race">1</td>
+                    <td class="race" data-tooltip="Barcelona verseny">1</td>
                 </tr>
                 <tr>
                     <td>2</td>
@@ -411,9 +411,9 @@
                     <td>10</td>
                     <td>11</td>
                     <td>12</td>
-                    <td class="practice">13</td>
-                    <td class="time">14</td>
-                    <td class="race">15</td>
+                    <td class="practice" data-tooltip="Montreál edzés">13</td>
+                    <td class="time" data-tooltip="Montreál időmérő">14</td>
+                    <td class="race" data-tooltip="Montreál verseny">15</td>
                 </tr>
                 <tr>
                     <td>16</td>
@@ -429,9 +429,9 @@
                     <td>24</td>
                     <td>25</td>
                     <td>26</td>
-                    <td class="practice">27</td>
-                    <td class="time">28</td>
-                    <td class="race">29</td>
+                    <td class="practice" data-tooltip="Spielberg edzés">27</td>
+                    <td class="time" data-tooltip="Spielberg időmérő">28</td>
+                    <td class="race" data-tooltip="Spielberg verseny">29</td>
                 </tr>
                 <tr>
                     <td>30</td>
@@ -463,9 +463,9 @@
                     <td>1</td>
                     <td>2</td>
                     <td>3</td>
-                    <td class="practice">4</td>
-                    <td class="time">5</td>
-                    <td class="race">6</td>
+                    <td class="practice" data-tooltip="Silverstone edzés">4</td>
+                    <td class="time" data-tooltip="Silverstone időmérő">5</td>
+                    <td class="race" data-tooltip="Silverstone verseny">6</td>
                 </tr>
                 <tr>
                     <td>7</td>
@@ -490,9 +490,9 @@
                     <td>22</td>
                     <td>23</td>
                     <td>24</td>
-                    <td class="practice">25</td>
-                    <td class="time">26</td>
-                    <td class="race">27</td>
+                    <td class="practice" data-tooltip="Spa edzés">25</td>
+                    <td class="time" data-tooltip="Spa időmérő">26</td>
+                    <td class="race" data-tooltip="Spa verseny">27</td>
                 </tr>
                 <tr>
                     <td>28</td>
@@ -531,9 +531,9 @@
                     <td></td>
                     <td></td>
                     <td></td>
-                    <td class="practice">1</td>
-                    <td class="time">2</td>
-                    <td class="race">3</td>
+                    <td class="practice" data-tooltip="Hungaroring edzés">1</td>
+                    <td class="time" data-tooltip="Hungaroring időmérő">2</td>
+                    <td class="race" data-tooltip="Hungaroring verseny">3</td>
                 </tr>
                 <tr>
                     <td>4</td>
@@ -567,9 +567,9 @@
                     <td>26</td>
                     <td>27</td>
                     <td>28</td>
-                    <td class="practice">29</td>
-                    <td class="time">30</td>
-                    <td class="race">31</td>
+                    <td class="practice" data-tooltip="Zandvoort edzés">29</td>
+                    <td class="time" data-tooltip="Zandvoort időmérő">30</td>
+                    <td class="race" data-tooltip="Zandvoort verseny">31</td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -599,9 +599,9 @@
                     <td>2</td>
                     <td>3</td>
                     <td>4</td>
-                    <td class="practice">5</td>
-                    <td class="time">6</td>
-                    <td class="race">7</td>
+                    <td class="practice" data-tooltip="Monza edzés">5</td>
+                    <td class="time" data-tooltip="Monza időmérő">6</td>
+                    <td class="race" data-tooltip="Monza verseny">7</td>
                 </tr>
                 <tr>
                     <td>8</td>
@@ -617,9 +617,9 @@
                     <td>16</td>
                     <td>17</td>
                     <td>18</td>
-                    <td class="practice">19</td>
-                    <td class="time">20</td>
-                    <td class="race">21</td>
+                    <td class="practice" data-tooltip="Baku edzés">19</td>
+                    <td class="time" data-tooltip="Baku időmérő">20</td>
+                    <td class="race" data-tooltip="Baku verseny">21</td>
                 </tr>
                 <tr>
                     <td>22</td>
@@ -669,9 +669,9 @@
                     <td></td>
                     <td>1</td>
                     <td>2</td>
-                    <td class="practice">3</td>
-                    <td class="time">4</td>
-                    <td class="race">5</td>
+                    <td class="practice" data-tooltip="Szingapúr edzés">3</td>
+                    <td class="time" data-tooltip="Szingapúr időmérő">4</td>
+                    <td class="race" data-tooltip="Szingapúr verseny">5</td>
                 </tr>
                 <tr>
                     <td>6</td>
@@ -687,18 +687,18 @@
                     <td>14</td>
                     <td>15</td>
                     <td>16</td>
-                    <td class="practice">17</td>
-                    <td class="time">18</td>
-                    <td class="race">19</td>
+                    <td class="practice" data-tooltip="Autsin edzés">17</td>
+                    <td class="time" data-tooltip="Autsin időmérő">18</td>
+                    <td class="race" data-tooltip="Autsin verseny">19</td>
                 </tr>
                 <tr>
                     <td>20</td>
                     <td>21</td>
                     <td>22</td>
                     <td>23</td>
-                    <td class="practice">24</td>
-                    <td class="time">25</td>
-                    <td class="race">26</td>
+                    <td class="practice" data-tooltip="Mexikóváros edzés">24</td>
+                    <td class="time" data-tooltip="Mexikóváros időmérő">25</td>
+                    <td class="race" data-tooltip="Mexikóváros verseny">26</td>
                 </tr>
                 <tr>
                     <td>27</td>
@@ -746,9 +746,9 @@
                     <td>4</td>
                     <td>5</td>
                     <td>6</td>
-                    <td class="practice">7</td>
-                    <td class="time">8</td>
-                    <td class="race">9</td>
+                    <td class="practice" data-tooltip="Interlagos edzés">7</td>
+                    <td class="time" data-tooltip="Interlagos időmérő">8</td>
+                    <td class="race" data-tooltip="Interlagos verseny">9</td>
                 </tr>
                 <tr>
                     <td>10</td>
@@ -763,9 +763,9 @@
                     <td>17</td>
                     <td>18</td>
                     <td>19</td>
-                    <td class="practice">20</td>
-                    <td class="time">21</td>
-                    <td class="race">22</td>
+                    <td class="practice" data-tooltip="Las-Vegas edzés">20</td>
+                    <td class="time" data-tooltip="Las-Vegas időmérő">21</td>
+                    <td class="race"data-tooltip="Las-Vegas verseny">22</td>
                     <td>23</td>
                 </tr>
                 <tr>
@@ -773,9 +773,9 @@
                     <td>25</td>
                     <td>26</td>
                     <td>27</td>
-                    <td class="practice">28</td>
-                    <td class="time">29</td>
-                    <td class="race">30</td>
+                    <td class="practice" data-tooltip="Katar edzés">28</td>
+                    <td class="time" data-tooltip="Katar időmérő">29</td>
+                    <td class="race" data-tooltip="Katar verseny">30</td>
                 </tr>
                 <tr>
                     <td>&nbsp;</td>
@@ -805,9 +805,9 @@
                     <td>2</td>
                     <td>3</td>
                     <td>4</td>
-                    <td class="practice">5</td>
-                    <td class="time">6</td>
-                    <td class="race">7</td>
+                    <td class="practice" data-tooltip="Abu Dhabi edzés">5</td>
+                    <td class="time" data-tooltip="Abu Dhabi időmérő">6</td>
+                    <td class="race" data-tooltip="Abu Dhabi verseny">7</td>
                 </tr>
                 <tr>
                     <td>8</td>
@@ -858,6 +858,7 @@
         </section>
     </section>
     </section>
+    <script src="./script.js"></script>
 </body>
 
 </html>
