--- a/girusantal_hf7/teams.html
+++ b/girusantal_hf7/teams.html
@@ -34,81 +34,112 @@
     <main class="team-page">
         <section class="team-1">
             <span class="team-name">Alpine</span>
-            <img class="team-logo" src="./img/alpine-1.png" alt="ALpine">
+            <img class="team-logo" src="./img/alpine-1.png" alt="Alpine">
+            <div class="team-info">BWT Alpine F1 Team <br> Enstone, Nagy-Britannia <br><br> Motor: Renault <br> Első verseny: 1986 <br> Világbajnoki cím: 2 <br> Csapatfőnök: Oliver Oakes</div>
             <img class="driver-1" src="./img/doohan-1.png" alt="Jack Doohan">
             <img class="driver-2" src="./img/gasly-2.png" alt="Pierre Gasly">
+            <div class="driver1-info">Jack Doohan <br><br> Ausztrália <br> 2003.01.20 <br><br> Versenyek: 1 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Pierre Gasly <br><br> Franciaország <br> 1996.02.07 <br><br> Versenyek: 154 <br> Dobogó: 5 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Jack Doohan</span>
             <span class="driver-2-name">Pierre Gasly</span>
         </section>
         <section class="team-2">
             <span class="team-name">Aston Martin</span>
             <img class="team-logo" src="./img/aston-martin.png" alt="Aston Martin">
+            <div class="team-info">Aston Martin Aramco <br> Silverstone, Nagy-Britannia <br><br> Motor: Mercedes <br> Első verseny: 2018 <br> Világbajnoki cím: 0 <br> Csapatfőnök: Mike Krack</div>
             <img class="driver-1" src="./img/alonso-2.png" alt="Fernando Alonso">
             <img class="driver-2" src="./img/stroll-1.png" alt="Lance Stroll">
+            <div class="driver1-info"><strong>Alonso</strong> <br><br> Spanyolország <br> 1981.07.29 <br><br> Versenyek: 404 <br> Dobogó: 106 <br> Világbajnoki cím: 2</div>
+            <div class="driver2-info">Lance Stroll <br><br> Kanada <br> 1998.10.29 <br><br> Versenyek: 167 <br> Dobogó: 3 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Fernando Alonso</span>
             <span class="driver-2-name">Lance Stroll</span>
         </section>
         <section class="team-3">
             <span class="team-name">Ferrari</span>
             <img class="team-logo" src="./img/ferrari-1.png" alt="Ferrari">
+            <div class="team-info">Scuderia Ferrari HP <br> Maranello, Olaszország <br><br> Motor: Ferrari <br> Első verseny: 1950 <br> Világbajnoki cím: 16 <br> Csapatfőnök: 
+                Frédéric Vasseur </div>
             <img class="driver-1" src="./img/Leclerc.png" alt="Charles Leclerc">
             <img class="driver-2" src="./img/hamilton-1.png" alt="Lewis Hamilton">
+            <div class="driver1-info">Charles Leclerc <br><br> Monaco <br> 1997.10.16 <br><br> Versenyek: 149 <br> Dobogó: 43 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Lewis Hamilton <br><br> Nagy-Britannia <br> 1985.01.07 <br><br> Versenyek: 356 <br> Dobogó: 202 <br> Világbajnoki cím: 7</div>
             <span class="driver-1-name">Charles Leclerc</span>
             <span class="driver-2-name">Lewis Hamilton</span>
         </section>
         <section class="team-4">
             <span class="team-name">Haas</span>
             <img class="team-logo" src="./img/haas-1.png" alt="Haas">
+            <div class="team-info">MoneyGram Haas F1 Team<br> KAnnapolis, USA <br><br> Motor: Ferrari <br> Első verseny: 2016 <br> Világbajnoki cím: 2 <br> Csapatfőnök: Ayao Komatsu</div>
             <img class="driver-1" src="./img/ocon-2.png" alt="Esteban Ocon">
             <img class="driver-2" src="./img/bearman-2.png" alt="Oliver Bearman">
+            <div class="driver1-info">Esteban Ocon <br><br> Franciaország <br> 1996.09.17 <br><br> Versenyek: 156 <br> Dobogó: 4 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Oliver Bearman <br><br> Nagy-Britannia <br> 2005.05.08 <br><br> Versenyek: 3 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Esteban Ocon</span>
             <span class="driver-2-name">Oliver Bearman</span>
         </section>
         <section class="team-5">
             <span class="team-name">McLaren</span>
             <img class="team-logo" src="./img/mclaren-1.png" alt="Mc Laren">
+            <div class="team-info">McLaren Formula 1 Team <br> Woking, Nagy-Britannia <br><br> Motor: Mercedes <br> Első verseny: 1966 <br> Világbajnoki cím: 9 <br> Csapatfőnök: Andrea Stella</div>
             <img class="driver-1" src="./img/piastri-2.png" alt="Oscar Piastri">
             <img class="driver-2" src="./img/norris-1.png" alt="Lando Norris">
+            <div class="driver1-info">Oscar Piastri <br><br> Ausztrália <br> 2001.04.06 <br><br> Versenyek: 46 <br> Dobogó: 10 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Lando Norris <br><br> Nagy-Britannia <br> 1999.11.13 <br><br> Versenyek: 128 <br> Dobogó: 26 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Oscar Piastri</span>
             <span class="driver-2-name">Lando Norris</span>
         </section>
         <section class="team-6">
             <span class="team-name">Mercedes-AMG Petronas </span>
             <img class="team-logo" src="./img/mercedes-logo.png" alt="Mercedes">
+            <div class="team-info">Mercedes-AMG PETRONAS F1 Team <br> Brackley, Nagy-Britannia <br><br> Motor: Mercedes <br> Első verseny: 1970 <br> Világbajnoki cím: 8 <br> Csapatfőnök: Toto Wolff</div>
             <img class="driver-1" src="./img/antonelli-1.png" alt="Kimi Antonelli">
             <img class="driver-2" src="./img/russell-1.png" alt="George Russell">
+            <div class="driver1-info">Kimi Antonelli <br><br> Olaszország <br> 2006.08.25 <br><br> Versenyek: 0 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">George Russell <br><br>Nagy-Britannia <br> 1998.02.15 <br><br> Versenyek: 128 <br> Dobogó: 15 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Kimi Antonelli</span>
             <span class="driver-2-name">George Russell</span>
         </section>
         <section class="team-7">
             <span class="team-name">Visa Cash App Racing Bulls </span>
             <img class="team-logo" src="./img/visarb-1.png" alt="Mercedes">
+            <div class="team-info">Visa Cash App RB Formula One Team <br> Faenza, Olaszország <br><br> Motor: Honda <br> Első verseny: 1985 <br> Világbajnoki cím: 0 <br> Csapatfőnök: Laurent Mekies</div>
             <img class="driver-1" src="./img/tsunoda-2.png" alt="Yuki Tsunoda">
             <img class="driver-2" src="./img/anonymus.png" alt="Lando Norris">
+            <div class="driver1-info">Yuki Tsunoda <br><br> Japán <br> 2000.05.11 <br><br> Versenyek: 90 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Ismeretlen <br><br> Talán <br> Liam Lawson <br> a legesélyesebb <br><br> vagy <br> Isack Hadjar</div>
             <span class="driver-1-name">Yuki Tsunoda</span>
-            <span class="driver-2-name">Unknown</span>
+            <span class="driver-2-name">Ismeretlen</span>
         </section>
         <section class="team-8">
             <span class="team-name">Red Bull Racing</span>
             <img class="team-logo" src="./img/redbull-1.png" alt="Red Bull">
+            <div class="team-info">Oracle Red Bull Racing <br> Milton Keynes, Nagy-Britannia <br><br> Motor: Honda <br> Első verseny: 1997 <br> Világbajnoki cím: 6 <br> Csapatfőnök: Christian Horner</div>
             <img class="driver-1" src="./img/Max_Verstappen.webp" alt="Max Verstappen">
             <img class="driver-2" src="./img/perez-2.png" alt="Sergio Perez">
+            <div class="driver1-info">Max Verstappen <br><br> Hollandia <br> 1997.09.30 <br><br> Versenyek: 209 <br> Dobogó: 112 <br> Világbajnoki cím: 4</div>
+            <div class="driver2-info">Sergio Perez <br><br> Mexico <br> 1990.01.26 <br><br> Versenyek: 282 <br> Dobogó: 39 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">Max Verstappen</span>
             <span class="driver-2-name">Sergio Perez</span>
         </section>
         <section class="team-9">
             <span class="team-name">Kick Sauber-Ferrari</span>
             <img class="team-logo" src="./img/sauber.png" alt="Sauber-Ferrari">
+            <div class="team-info">Stake F1 Team Kick Sauber<br> Hinwil, Svájc <br><br> Motor: Ferrari <br> Első verseny: 1993 <br> Világbajnoki cím: 0 <br> Csapatfőnök: James Key</div>
             <img class="driver-1" src="./img/hulkenberg-1.png" alt="Nico Hulkenberg">
             <img class="driver-2" src="./img/bortoleto-1.png" alt="Gabriel Bortoleto">
-            <span class="driver-1-name">Nivo Hulkenberg</span>
+            <div class="driver1-info">Nico Hulkenberg <br><br> Németország <br> 1987.08.19 <br><br> Versenyek: 230 <br> Dobogó: 3 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Gabriel Bortoleto <br><br> Brazília <br> 2004.10.14 <br><br> Versenyek: 0 <br> Dobogó: 0 <br> Világbajnoki cím: 0</div>
+            <span class="driver-1-name">Nico Hulkenberg</span>
             <span class="driver-2-name">Gabriel Bortoleto</span>
         </section>
         <section class="team-10">
             <span class="team-name">Williams</span>
             <img class="team-logo" src="./img/williams-2.png" alt="Williams">
+            <div class="team-info">Williams Racing <br>Grove, Nagy-Britannia <br><br> Motor: Mercedes <br> Első verseny: 1978 <br> Világbajnoki cím: 9 <br> Csapatfőnök: James Vowles</div>
             <img class="driver-1" src="./img/albon.png" alt="Alex Albon">
             <img class="driver-2" src="./img/sainz.png" alt="Carlos Sainz">
+            <div class="driver1-info">ALex Albon <br><br> Tájföld <br> 1996.03.23 <br><br> Versenyek: 105 <br> Dobogó: 2 <br> Világbajnoki cím: 0</div>
+            <div class="driver2-info">Carlos Sainz <br><br> Spanyolország<br> 1994.09.01 <br><br> Versenyek: 208 <br> Dobogó: 27 <br> Világbajnoki cím: 0</div>
             <span class="driver-1-name">ALex Albon</span>
             <span class="driver-2-name">Carlos Sainz</span>
         </section>
